[package]
name = "malwaredb-murmurhash3"
version = "0.1.3"
authors = ["mhallin <mhallin@gmail.com>", "Richard Zak <richard.j.zak@gmail.com>"]
edition = "2021"
description = "MurmurHash3 implementation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/malwaredb/murmurhash3-rs"

[lib]
name = "murmurhash3"
path = "src/lib.rs"

[dev-dependencies]
rand = "0.9"
criterion = "0.7.0"

[[bench]]
name = "murmurhash3"
harness = false