[package]
name = "malwaredb-murmurhash3"
version = "0.1.3"
authors = ["mhallin <mhallin@gmail.com>", "Richard Zak <richard.j.zak@gmail.com>"]
edition = "2021"
description = "MurmurHash3 implementation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/malwaredb/murmurhash3-rs"
rust-version = "1.78"

[dev-dependencies]
rand = "0.10"
criterion = "0.8.0"

[[bench]]
name = "murmurhash3"
harness = false